--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,6 @@ cython_debug/
 # Support for Project snippet scope
 !.vscode/*.code-snippets
 
+plotting
+
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
